2006-04-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail-source.el: Don't require timer/timer-funcs.

	* gnus-async.el: Ditto.

	* password.el: Ditto.

	* nnheaderxm.el (nnheader-cancel-timer): Ditto.

	* mm-url.el: Ditto.

	* gnus-xmas.el: Don't require timer-funcs.

	* mm-util.el: Require timer/timer-funcs.

2006-04-23  Andreas Seltenreich  <andreas+ding@gate450.dyndns.org>  (tiny change)

	* mm-url.el (mm-url-insert-file-contents): Don't set Connection:
	Close.

2006-04-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-uu.el (mm-uu-pgp-encrypted-extract-1): Assume buffer is made
	unibyte after clear-decrypt function runs.

	* mml2015.el (mml2015-pgg-clear-decrypt): Treat data which pgg
	returns as a unibyte string.

2006-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Revert.

	* pgg-gpg.el (pgg-string-to-multibyte): Remove.
	(pgg-gpg-process-sentinel): Revert.

	* pgg-pgp.el (pgg-pgp-process-region): Revert.
	(pgg-pgp-lookup-key): Revert.

	* pgg-pgp5.el (pgg-pgp5-process-region): Revert.
	(pgg-pgp5-lookup-key): Revert.

	* pgg.el (pgg-fetch-key): Revert.

2006-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind string-as-multibyte for XEmacs.

	* mml1991.el (mml1991-pgg-sign): No need to load pgg.el, which is
	always loaded by way of gnus-art.el -> mm-uu.el -> mml2015.el.
	(mml1991-pgg-encrypt): Ditto.

	* pgg-gpg.el (pgg-string-to-multibyte): New function.
	(pgg-gpg-process-sentinel): Make sure pgg-output-buffer is always
	a multibyte buffer.

	* pgg-pgp.el (pgg-pgp-process-region): Ditto.
	(pgg-pgp-lookup-key): Ditto.

	* pgg-pgp5.el (pgg-pgp5-process-region): Ditto.
	(pgg-pgp5-lookup-key): Ditto.

	* pgg.el (pgg-fetch-key): Ditto.

2006-04-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-user-organization-file): Check several
	locations of the organization file.

	* gnus-sum.el (gnus-summary-mime-map, gnus-summary-make-menu-bar):
	Add gnus-article-view-part-as-type.
